# peft

./: .gitignore  README.custom.md  compose.yml  pyproject.toml
docker/peft-gpu-custom/: Dockerfile
experiments/: merge_peft_model.py
experiments/llama3_commonsense/: evaluate_commonsense.py  evaluate_commonsense_multi_adapter.py  train_bola_commonsense.py  train_lora_commonsense.py
experiments/llama3_math/: evaluate_math.py  evaluate_math_multi_adapter.py  train_bola_math.py  train_lora_math.py
experiments/notebooks/: run_jupyter.sh  weight_analysis.ipynb
experiments/roberta_gleu/: train_bola_gleu.py  train_lora_gleu.py
lsf_scripts/llama3_commonsense/dora/: evaluate_llama3_dora_commonsense.sh  train_llama3_dora_commonsense.sh
lsf_scripts/llama3_commonsense/lora/: evaluate_llama3_lora_commonsense.sh  train_llama3_lora_commonsense.sh
lsf_scripts/llama3_commonsense/vanilla/: evaluate_llama3_commonsense.sh  evaluate_llama3_instruct_commonsense.sh
lsf_scripts/llama3_math/dora/: evaluate_llama3_dora_math.sh  make_variants.sh  submit_tmp_jobs.sh  train_llama3_dora_math.sh
lsf_scripts/llama3_math/lora/: evaluate_llama3_lora_math.sh  make_variants.sh  submit_tmp_jobs.sh  train_llama3_lora_math.sh
lsf_scripts/llama3_math/vanilla/: evaluate_llama3_instruct_math.sh  evaluate_llama3_math.sh
lsf_scripts/roberta_gleu/bola/: roberta_base_cola.sh  roberta_base_mnli.sh  roberta_base_mrpc.sh  roberta_base_qnli.sh  roberta_base_qqp.sh  roberta_base_rte.sh  roberta_base_sst2.sh  (+1 more)
src/peft/: __init__.py  mapping.py  peft_model.py
tests/: test_bola.py
(+35 files in other folders)
